View Issue Details

IDProjectCategoryView StatusLast Update
0026611Open CASCADEOCCT:Visualizationpublic2015-10-23 20:49
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritycrash 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version6.7.1 
Target Version6.9.1Fixed in Version6.9.1 
Summary0026611: Visualization, TKService - fix NULL-dereference in Font_FontMgr on broken font
DescriptionInvalid font installed in the system might result in application crash in Font_FontMgr.cxx:
  Handle(TCollection_HAsciiString) aFontName = new TCollection_HAsciiString (aFontFace->family_name); //!< family_name is NULL
  Handle(TCollection_HAsciiString) aFontPath = new TCollection_HAsciiString (theFontPath);
  aResult = new Font_SystemFont (aFontName, anAspect, aFontPath);
Steps To Reproduce
pload MODELING VISUALIZATION
box b 1 2 3
vinit View1
vclear
vaxo
vdisplay b
vfit
vfont add H2HSRM.TTF fnt
vdrawtext t "My Text" -font fnt

Expected result: error indicating broken/unsupported font.
Actual result:
An exception was caught 000007FED5C54B28 : Standard_NullObject: TCollection_AsciiString : parameter 'astring'
** Exception ** 000007FED5C54B28 : Standard_NullObject: TCollection_AsciiString : parameter 'astring'

TagsNo tags attached.
Test case numberNot needed

Activities

git

2015-08-27 12:35

administrator   ~0044723

Branch CR26611 has been created by kgv.

SHA-1: 731f2c5ad4554b287cc3c1ba4a4ba532c30c3a2f


Detailed log of new commits:

Author: kgv
Date: Thu Aug 27 12:34:09 2015 +0300

    0026611: Visualization, TKService - fix NULL-dereference in Font_FontMgr on broken font
    
    Check FT_Face::family_name for NULL during detection.
    Skip fonts without mandatory UNICODE charset in Font_FontMgr.

kgv

2015-08-27 12:36

developer   ~0044725

Patch is ready for review.

san

2015-08-27 13:25

developer   ~0044735

Branch CR26611 reviewed without remarks, ready for testing.

git

2015-08-27 18:49

administrator   ~0044764

Branch CR26611 has been updated forcibly by mkv.

SHA-1: 51b3e62c94626fe7068bb92ba2e8d6b2425caa64

mkv

2015-08-28 16:06

tester   ~0044828

Dear BugMaster,
Branch CR26611 was rebased on branch IR-2015-08-27 of occt git-repository.
SHA-1: 51b3e62c94626fe7068bb92ba2e8d6b2425caa64

mkv

2015-08-28 16:07

tester   ~0044829

Dear BugMaster,
Branch CR26611 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 51b3e62c94626fe7068bb92ba2e8d6b2425caa64

Number of compiler warnings:

occt component :
Linux: 15 (15 on master)
Windows: 0 (0 on master)

products component :
Linux: 39 (39 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR26611-master-occt-64/Debian70-64/bugs/vis/bug26611.html
http://occt-tests/CR26611-master-occt-64/Windows-64-VC10/bugs/vis/bug26611.html
bugs vis bug26611: OK

Testing on Linux:
occt component :
Total MEMORY difference: 91940287 / 91191631 [+0.82%]
Total CPU difference: 17686.179999999003 / 17162.029999999384 [+3.05%]
products component :
Total MEMORY difference: 25252439 / 25216901 [+0.14%]
Total CPU difference: 7043.789999999999 / 7037.939999999998 [+0.08%]

Testing on Windows:
occt component :
Total MEMORY difference: 57106722 / 57099512 [+0.01%]
Total CPU difference: 16454.12747449899 / 16461.33472069891 [-0.04%]
products component :
Total MEMORY difference: 16228598 / 16228570 [+0.00%]
Total CPU difference: 5385.981325299975 / 5334.079792599963 [+0.97%]

There are no differences in images found by testdiff

git

2015-08-28 16:08

administrator   ~0044830

Branch CR26611 has been updated by mkv.

SHA-1: e48fdde7480bb1a3936a60101b4956e85ee21d5a


Detailed log of new commits:

Author: mkv
Date: Fri Aug 28 16:08:32 2015 +0300

    Test case for issue CR26611

mkv

2015-08-28 16:09

tester   ~0044831

Dear kgv,
could you please review following test case
bugs vis bug26611

kgv

2015-08-28 16:13

developer   ~0044832

Dear mkv,

> could you please review following test case
> bugs vis bug26611
this test case will FAIL due to expected Error message.
We need extra option to handle such kind of tests, but since we have not it yet - it is better to drop the test.

git

2015-08-28 17:06

administrator   ~0044841

Branch CR26611 has been updated by mkv.

SHA-1: 079c105ecc363e5e1b432eba7c3d2c1f479904db


Detailed log of new commits:

Author: mkv
Date: Fri Aug 28 17:06:26 2015 +0300

    Drop the test case for issue CR26611

mkv

2015-08-28 17:07

tester   ~0044842

Dear BugMaster,
Branch CR26611 is TESTED.

git

2015-10-16 16:37

administrator   ~0047004

Branch CR26611 has been deleted by kgv.

SHA-1: 079c105ecc363e5e1b432eba7c3d2c1f479904db

Related Changesets

occt: master 508643cf

2015-09-03 11:26:30

kgv


Committer: bugmaster Details Diff
0026611: Visualization, TKService - fix NULL-dereference in Font_FontMgr on broken font

Check FT_Face::family_name for NULL during detection.
Skip fonts without mandatory UNICODE charset in Font_FontMgr.
Test case for issue CR26611
Drop the test case for issue CR26611
Affected Issues
0026611
mod - src/Font/Font_FontMgr.cxx Diff File

Issue History

Date Modified Username Field Change
2015-08-27 12:25 kgv New Issue
2015-08-27 12:25 kgv Assigned To => kgv
2015-08-27 12:27 kgv Product Version 6.9.0 => 6.7.1
2015-08-27 12:31 kgv Summary Visualization, TKService - fix NULL-dereference on broken font => Visualization, TKService - fix NULL-dereference in Font_FontMgr on broken font
2015-08-27 12:31 kgv Steps to Reproduce Updated
2015-08-27 12:35 git Note Added: 0044723
2015-08-27 12:36 kgv Note Added: 0044725
2015-08-27 12:36 kgv Assigned To kgv => san
2015-08-27 12:36 kgv Severity minor => trivial
2015-08-27 12:36 kgv Status new => resolved
2015-08-27 12:36 kgv Severity trivial => crash
2015-08-27 13:25 san Note Added: 0044735
2015-08-27 13:25 san Assigned To san => bugmaster
2015-08-27 13:25 san Status resolved => reviewed
2015-08-27 18:49 git Note Added: 0044764
2015-08-27 19:00 mkv Assigned To bugmaster => mkv
2015-08-28 16:06 mkv Note Added: 0044828
2015-08-28 16:07 mkv Note Added: 0044829
2015-08-28 16:07 mkv Assigned To mkv => kgv
2015-08-28 16:07 mkv Status reviewed => feedback
2015-08-28 16:08 git Note Added: 0044830
2015-08-28 16:09 mkv Note Added: 0044831
2015-08-28 16:09 mkv Test case number => bugs vis bug26611
2015-08-28 16:13 kgv Note Added: 0044832
2015-08-28 16:13 kgv Assigned To kgv => mkv
2015-08-28 17:06 git Note Added: 0044841
2015-08-28 17:07 mkv Note Added: 0044842
2015-08-28 17:07 mkv Assigned To mkv => bugmaster
2015-08-28 17:07 mkv Status feedback => tested
2015-08-28 17:08 mkv Test case number bugs vis bug26611 => Not needed
2015-09-04 13:02 bugmaster Changeset attached => occt master 508643cf
2015-09-04 13:02 bugmaster Status tested => verified
2015-09-04 13:02 bugmaster Resolution open => fixed
2015-10-16 14:56 aiv Status verified => closed
2015-10-16 16:37 git Note Added: 0047004
2015-10-23 20:49 aiv Fixed in Version => 6.9.1