0026611: Visualization, TKService - fix NULL-dereference in Font_FontMgr on broken font

Check FT_Face::family_name for NULL during detection.
Skip fonts without mandatory UNICODE charset in Font_FontMgr.
Test case for issue CR26611
Drop the test case for issue CR26611